<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/EnviroGray"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_applogo"
        android:contentDescription="@string/app_logo"
        android:layout_width="297dp"
        android:layout_height="108dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>
    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_applogo"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="phone"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textColor="@color/EnviroGreen"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_number_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="password"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="@color/EnviroGreen"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold">

    </EditText>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp">



        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="17dp"
            />

            <TextView
                android:id="@+id/forgot_password_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginStart="60dp"
                />


    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button"
        android:padding="17dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp">

    </Button>

    <TextView
        android:id="@+id/admin_Panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_an_admin"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="23dp"
        />

    <TextView
        android:id="@+id/not_admin_Panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_not_admin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="23dp"
        android:visibility="invisible"
        />

</RelativeLayout>

