<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/register_applogo"
        android:contentDescription="@string/app_logo"
        android:layout_width="297dp"
        android:layout_height="108dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"/>

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_applogo"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/EnviroGreen"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold">

    </EditText>





    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/EnviroGreen"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"

        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone_number_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="password"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="@color/EnviroGreen"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold">

    </EditText>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/EnviroGreen"
        android:padding="17dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp">
    </Button>
</RelativeLayout>